<resources>
    <string name="app_name">Alarm App</string>
    <string name="action_settings">Settings</string>
    <string name="About">About</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="colon">:</string>
    <string name="HOUR">08</string>
    <string name="MINUTE">22</string>
    <string name="name">Nombre:</string>
    <string name="example_name">Metformina 500mg</string>
    <string name="lunes">LUN</string>
    <string name="martes">MAR</string>
    <string name="miercoles">MIE</string>
    <string name="jueves">JUE</string>
    <string name="viernes">VIE</string>
    <string name="sabado">SAB</string>
    <string name="domingo">DOM</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SAVE">SAVE</string>
</resources>
