<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    android:background="##dce5e0">

    <LinearLayout
        android:id="@+id/detail_activity_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_activity_AM"
                style="@style/AMorPM"
                android:gravity="end"
                android:text="@string/AM" />

            <TextView
                android:id="@+id/detail_activity_PM"
                style="@style/AMorPM"
                android:text="@string/PM" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_activity_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/detail_activity_hour"
                style="@style/timeEditText"
                android:gravity="end"
                android:text="@string/HOUR" />

            <TextView
                style="@style/colon"
                android:gravity="end"
                android:text="@string/colon" />

            <EditText
                android:id="@+id/detail_activity_minute"
                style="@style/timeEditText"
                android:text="@string/MINUTE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/name"
                android:gravity="end"
                android:text="@string/name" />

            <EditText
                android:id="@+id/detail_activity_name"
                style="@style/nameEditText"
                android:hint="@string/example_name" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_activity_monday"
                style="@style/days_button"
                android:text="@string/lunes" />

            <TextView
                android:id="@+id/detail_activity_tuesday"
                style="@style/days_button"
                android:text="@string/martes" />

            <TextView
                android:id="@+id/detail_activity_wednesday"
                style="@style/days_button"
                android:text="@string/miercoles" />

            <TextView
                android:id="@+id/detail_activity_thursday"
                style="@style/days_button"
                android:text="@string/jueves" />

            <TextView
                android:id="@+id/detail_activity_friday"
                style="@style/days_button"
                android:text="@string/viernes" />

            <TextView
                android:id="@+id/detail_activity_saturday"
                style="@style/days_button"
                android:text="@string/sabado" />

            <TextView
                android:id="@+id/detail_activity_sunday"
                style="@style/days_button"
                android:text="@string/domingo" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/buttonBar"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|end">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5" />

        <TextView
            android:id="@+id/detail_activity_cancel"
            style="@style/bottom_buttons"
            android:text="@string/CANCEL" />

        <TextView
            android:id="@+id/detail_activity_save"
            style="@style/bottom_buttons"
            android:text="@string/SAVE" />
    </LinearLayout>


</RelativeLayout>